--- a/index.html
+++ b/index.html
@@ -21,5 +21,10 @@
 
         C'est incroyable !<br>
     	Bonne fête babi ! </p>
+    	<p>还是买小米好，支持国产 </p>
+    	<p>还是买小米好，支持国产 </p>
+    	<p>还是买小米好，支持国产 </p>
+    	<p>还是买小米好，支持国产 </p>
+    	<p>还要练腹肌</p>
 	</body>
 </html>
