--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
         C'est incroyable !<br>
     	Bonne fête babi ! </p>
+    	Bonne fête babi ! </p>
+    	Bonne fête babi ! </p>
     	<p>还是买小米好，支持国产 </p>
     	<p>还是买小米好，支持国产 </p>
     	<p>还是买小米好，支持国产 </p>
