--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         height="341">
          <br>
 
-		Ça fait prèsque 2 ans qu'on est ensemble  <br>
+		Ça fait presque 2 ans qu'on est ensemble  <br>
 
         C'est incroyable ! ça passe très vite le temps n'est-ce pas ?<br>
     	Bonne fête babi ! <br>
@@ -70,8 +70,8 @@
      	</li>
         <p >----------------------------------------------------------------------------------------------------------------</p>
      	<p >En plus j'ai un petit rêve pour l'instant </p>
-        <p >Je veux trop t'emmenr à ma ville Wuhan pour l'explorer</p>
-        <p >On pourrait le réaliser en quelques ans </p>
+        <p >Je veux trop t'emmener à ma ville Wuhan pour l'explorer</p>
+        <p >On pourrait le réaliser dans quelques ans </p>
         <p class="fight"> Fighting    !!!!!!  </p>
         
         <img src="wuhan1.jpg" alt="wuhan1" width="400"height="341"><img src="wuhan2.jpg" alt="wuhan2" width="400"height="341">
